# cchessGUI

./: .gitignore  CMakeLists.txt
include/: board.h  config.h  events.h  interface.h  piece.h  render.h  sprites.h  utils.h
src/: board.c  events.c  interface.c  main.c  render.c  sprites.c  utils.c
